--- a/public/style/style.css
+++ b/public/style/style.css
@@ -259,12 +259,11 @@
 }
 .leaders {
   width: 180px;
-  height: 220px;
   align-items: center;
   gap: 5px;
 }
 .leaders img {
-  width: 180px;
+  width: 100%;
   height: 180px;
   object-fit: cover;
 }
@@ -351,7 +350,7 @@
 
 .member {
   width: 200px;
-  height: 200px;
+  height: 210px;
   align-items: center;
   justify-content: space-between;
 }
